# dummy-pip-line-return-issue

./: MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci-build-downstream.yml
src/dummypiplinereturnbug/tests/: test_gen_files_with_line_returns.py
src/dummypiplinereturnbug/tests/results/: pregen_text_file.txt
